PR/50817: David Binderman: Delete dead code (copy from if_et.c)